# ScopeX

./: .gitignore  BUILDING.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Doxyfile  HACKING.md  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
docs/doc_html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/doc_html/.doctrees/: api.doctree  environment.pickle  index.doctree
docs/doc_html/_sources/: api.rst.txt
docs/project_plan/: 00_roadmap.md  10_orderbook-design.md  20_engine-arch.md  30_backtest-notes.md  40_perf-profiling.md
docs/sphinx/source/: conf.py  index.rst
examples/: orders_demo.csv
include/libs/concurrency/: spsc_ring.hpp
include/libs/engine/: engine.hpp
source/: lib.cpp  main.cpp
source/cli/: main.cpp  main_bench.cpp  main_m2_demo.cpp
source/libs/engine/: engine.cpp  engine.hpp
test/: CMakeLists.txt
test/source/: scopeX_test.cpp
tests/: CMakeLists.txt
tests/source/concurrency/: bench_spsc_throughput.cpp  spsc_selfcheck.cpp  test_spsc_boundaries.cpp  test_spsc_correctness.cpp  test_spsc_stress.cpp
tests/source/engine/: test_engine_basic.cpp
